examples/datalog/14_aggregations/83_min_string.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_min_str
Knowledge graph 'test_min_str' created.
Switched to knowledge graph: test_min_str
> .kg use test_min_str
Switched to knowledge graph: test_min_str
> +names[("Charlie",), ("Alice",), ("Bob",), ("David",)].
Inserted 4 fact(s) into 'names'.
> +first_name(<MIN:N>) :- names(N).
Script error: Parse error: Invalid term: '<MIN:N>'
