examples/datalog/14_aggregations/83_min_string.dl
% Test: MIN of strings
% Expected: Lexicographically smallest
% Category: 14_aggregations
% Priority: P2 - Aggregation patterns

.kg create test_min_str
.kg use test_min_str

+names[("Charlie",), ("Alice",), ("Bob",), ("David",)].

+first_name(<MIN:N>) :- names(N).

?- first_name(N).

.kg use default
.kg drop test_min_str
